2006-03-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-options-dialog.c:
	* src/utils.c:
	Fixed bug #336649 (permission numbers).

	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-file-selector.h:
	Removed unused microbutton.

2006-03-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.c:
	* src/useractions.c:
	Added SHIFT+click on 'copy fnames' toolbar button for copying selected full paths to clipboard.

2006-03-29  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-main-win.c:
	Fixed bug #309877 (strange artifacts with horizontal scrolling).

2006-03-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/useractions.c:
	SHIFT+click on toolbar edit button opens a new document.

2006-03-28  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-main-win.c:
	Small fix for ALT+[LETTER].

	* src/gnome-cmd-main-win.c:
        Fixed bug #332258 (left/right start directory parameter).

	* src/gnome-cmd-quicksearch-popup.c:
	Fixed leaving the focus on the last file that matched the quick-search filter.

2006-03-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.c:
	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-file-selector.h:
	* src/useractions.c:
	* src/useractions.h:
	* src/history.c:
	* src/history.h:
	Revamped toolbar layout.

2006-03-24  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.c:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-main-win.c:
	* src/gnome-cmd-options-dialog.c:
	Quick search by ALT+Letter(s)

2006-03-23  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-dir-indicator.c:
	* src/gnome-cmd-search-dialog.c:
	* src/owner.c:
	* src/utils.c:
	Fixed memory bugs

2006-03-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.c:
        Added CTRL+SHIFT+A for deselecting all files (for conformance with HIG 2.0)

2006-03-17  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-file-selector.c:
	Fixed a crash when viewing "SMB" connections.
