@@ -1,3 +1,8 @@
+2006-04-02  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-options-dialog.c:
+	Modified 'Quick search' item in 'Options|General' tab
+
 2006-03-31  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-options-dialog.c:
